--- a/examples/interation_between_neurons.ipynb
+++ b/examples/interation_between_neurons.ipynb
@@ -2,33 +2,16 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Collecting tqdm\n",
-      "  Downloading tqdm-4.66.4-py3-none-any.whl.metadata (57 kB)\n",
-      "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m57.6/57.6 kB\u001b[0m \u001b[31m1.4 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-      "\u001b[?25hDownloading tqdm-4.66.4-py3-none-any.whl (78 kB)\n",
-      "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m78.3/78.3 kB\u001b[0m \u001b[31m5.1 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-      "\u001b[?25hInstalling collected packages: tqdm\n",
-      "Successfully installed tqdm-4.66.4\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import tensorflow.compat.v1 as tf \n",
     "import matplotlib.pyplot as plt\n",
     "from tqdm import tqdm\n",
     "import lucid_kietzmannlab.modelzoo.vision_models as models\n",
-    "from lucid_kietzmannlab.misc.io import show\n",
     "import lucid_kietzmannlab.optvis.objectives as objectives\n",
-    "import lucid_kietzmannlab.optvis.param as param\n",
     "import lucid_kietzmannlab.optvis.render as render\n",
-    "import lucid_kietzmannlab.optvis.transform as transform\n",
     "from IPython.display import clear_output\n",
     "from ipywidgets import interact, Dropdown, IntSlider\n"
    ]
@@ -49,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -58,42 +41,10 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### In the code block below a user can interactively choose the layer to maximally activate the neuron of and then visualize it for a certain channel"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "2686a71f1a454d4fb00133d03c46a039",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "interactive(children=(Dropdown(description='Layer:', options=('Placeholder', 'Conv2D', 'BiasAdd', 'Reshape', '…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/plain": [
-       "<function __main__.visualize(layer_name, channel)>"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "layer_name_list = [node.name for node in model.graph_def.node if 'input' not in node.name]\n",
     "\n",
@@ -132,13 +83,14 @@
     "            clear_output(wait=True)\n",
     "            # Render visualization for the selected layer and channel\n",
     "            try:\n",
-    "               _ = render.render_vis(model, C((layer_name, channel)))\n",
+    "              _ = render.render_vis(model, C((layer_name, channel)))\n",
     "            except Exception:\n",
     "                print('No gradients for this layer')   \n",
     "\n",
     "def visualize_all():\n",
     "    # Check if the layer exists in the shape dictionary\n",
-    "    layer_name = layer_dropdown.value\n",
+    "    layer_name = current_dropdown_value({'new': layer_dropdown.value})\n",
+    "    print(layer_name)\n",
     "    if layer_name in layer_shape_dict:\n",
     "            # Check if the selected channel is within bounds\n",
     "            try:\n",
@@ -148,20 +100,29 @@
     "                  image_channel[channel] = images \n",
     "            except Exception:\n",
     "                print('No gradients for this layer')    \n",
+    "    return image_channel            \n",
     "                              \n",
     "def plot_images(image_channel):\n",
-    "    num_channels = len(image_channel)\n",
-    "    num_rows = 4\n",
-    "    num_cols = num_channels // num_rows + (num_channels % num_rows > 0)\n",
-    "    fig, axs = plt.subplots(nrows=num_rows, ncols=num_cols, figsize=(12, 12))\n",
-    "    for i, (channel, images) in enumerate(image_channel.items()):\n",
-    "        row = i // num_cols\n",
-    "        col = i % num_cols\n",
-    "        axs[row, col].imshow(images[0])  # Assuming images[0] is the visualization result\n",
-    "        axs[row, col].set_title(f\"Channel {channel}\")\n",
-    "        axs[row, col].axis('off')\n",
-    "    plt.tight_layout()\n",
-    "    plt.show()\n",
+    "    channels = list(image_channel.keys())\n",
+    "    for i in range(0, len(channels), 3):\n",
+    "        fig, axs = plt.subplots(1, 3, figsize=(15, 5))  # Create a figure with 3 subplots in a row\n",
+    "        for j in range(3):\n",
+    "            channel_index = i + j\n",
+    "            if channel_index < len(channels):\n",
+    "                channel = channels[channel_index]\n",
+    "                images = image_channel[channel]\n",
+    "                try:\n",
+    "                    axs[j].imshow(images[0][0,:])  # Assuming images[0] is the visualization result\n",
+    "                    axs[j].set_title(f\"Channel {channel}\")\n",
+    "                    axs[j].axis('off')\n",
+    "                except Exception as e:\n",
+    "                    print(f\"Error plotting channel {channel}: {e}\")\n",
+    "                    axs[j].axis('off')\n",
+    "                    axs[j].text(0.5, 0.5, 'Error', ha='center', va='center')\n",
+    "            else:\n",
+    "                axs[j].axis('off')  # Hide the subplot if there are no more channels to plot\n",
+    "        plt.tight_layout()\n",
+    "        plt.show()\n",
     "# Create dropdown menu for layer selection\n",
     "layer_dropdown = Dropdown(options=list(layer_shape_dict.keys()), description='Layer:')\n",
     "\n",
@@ -177,13 +138,65 @@
     "        channel_slider.max = max_channel\n",
     "        \n",
     "        \n",
+    "def current_slider_value(*args):\n",
+    "    return channel_slider.value\n",
+    "\n",
+    "# Function to print the current value of the dropdown\n",
+    "def current_dropdown_value(change):\n",
+    "    return change['new']\n",
+    "\n",
+    "# Attach the print function to the slider's value change event\n",
+    "channel_slider.observe(current_slider_value, names='value')\n",
+    "\n",
+    "# Attach the print function to the dropdown's value change event\n",
+    "layer_dropdown.observe(current_dropdown_value, names='value')\n",
     "        \n",
+    "\n",
+    "       "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### In the code block below a user can interactively choose the layer to maximally activate the neuron of and then visualize it for a certain channel"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "3912473ac2074f328e2c48413cf00def",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "interactive(children=(Dropdown(description='Layer:', options=('Placeholder', 'Conv2D', 'BiasAdd', 'Reshape', '…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<function __main__.visualize(layer_name, channel)>"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
     "layer_dropdown.observe(update_channel_slider, names='value')\n",
     "\n",
     "# Create an interactive visualization\n",
-    "interact(visualize, layer_name=layer_dropdown, channel=channel_slider)     \n",
-    "\n",
-    "       "
+    "interact(visualize, layer_name=layer_dropdown, channel=channel_slider)     \n"
    ]
   },
   {
@@ -199,17 +212,41 @@
    "metadata": {},
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Conv2D_1\n"
+     ]
+    },
+    {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "  5%|▍         | 6/127 [00:17<05:56,  2.94s/it]"
+      " 43%|████▎     | 55/127 [02:58<03:40,  3.06s/it]"
      ]
     }
    ],
    "source": [
     "image_channel = visualize_all()\n",
+    " "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Visualize neuron activations for all the channels in the layer"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
     "if image_channel:\n",
-    "    plot_images(image_channel)    "
+    "    plot_images(image_channel)   "
    ]
   },
   {
