--- a/examples/interation_between_neurons.ipynb
+++ b/examples/interation_between_neurons.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,27 +34,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "model_checkpoint_dir = '/Users/vkapoor/Downloads/training_seed_05/'\n",
-    "model_checkpoint = 'model.ckpt_epoch89'"
+    "# This is currently not working \n",
+    "\n",
+    "model_checkpoint_dir = \"/share/klab/vkapoor/training_seed_05\"\n",
+    "model_checkpoint = \"model.ckpt_epoch89\"\n",
+    "#model = models.AlexNetEcoset(model_checkpoint_dir = model_checkpoint_dir, model_checkpoint = model_checkpoint)\n",
+    "#model.load_graphdef()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "model = models.AlexNet(model_checkpoint_dir, model_checkpoint)\n",
+    "# Alexnet with ImageNet weights\n",
+    "model = models.AlexNet()\n",
     "model.load_graphdef()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -93,9 +98,9 @@
     "            clear_output(wait=True)\n",
     "            # Render visualization for the selected layer and channel\n",
     "            try:\n",
-    "               _ = render.render_vis(model, C((layer_name, channel)))\n",
+    "              _ = render.render_vis(model, C((layer_name, channel)))\n",
     "            except Exception:\n",
-    "               print('No gradients for this layer')   \n",
+    "                print('No gradients for this layer')   \n",
     "\n",
     "def visualize_all():\n",
     "    # Check if the layer exists in the shape dictionary\n",
@@ -173,16 +178,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-<<<<<<< HEAD
-   "outputs": [],
-=======
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "5634f246654449d6b5c58fac280a9b73",
+       "model_id": "bc4a710d1af34ea89b0105ddcac85a7c",
        "version_major": 2,
        "version_minor": 0
       },
@@ -199,12 +201,11 @@
        "<function __main__.visualize(layer_name, channel)>"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
->>>>>>> 30d79e6e0a1f430d7ab364c144683a66d7f81c7a
    "source": [
     "layer_dropdown.observe(update_channel_slider, names='value')\n",
     "\n",
@@ -221,30 +222,24 @@
   },
   {
    "cell_type": "code",
-<<<<<<< HEAD
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-=======
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Conv2D_1\n"
+      "Conv2D_7\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " 25%|██▌       | 32/127 [01:43<05:07,  3.24s/it]"
+      " 45%|████▍     | 57/127 [06:45<09:06,  7.81s/it]"
      ]
     }
    ],
->>>>>>> 30d79e6e0a1f430d7ab364c144683a66d7f81c7a
    "source": [
     "image_channel = visualize_all()\n",
     " "
