--- a/examples/test.ipynb
+++ b/examples/test.ipynb
@@ -2,60 +2,168 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "InvalidArgumentError",
-     "evalue": "Graph execution error:\n\nDetected at node 'tower_0/strided_slice' defined at (most recent call last):\nNode: 'tower_0/strided_slice'\nCannot assign a device for operation tower_0/strided_slice: {{node tower_0/strided_slice}} was explicitly assigned to /device:GPU:0 but available devices are [ /job:localhost/replica:0/task:0/device:CPU:0 ]. Make sure the device specification refers to a valid device. The requested device appears to be a GPU, but CUDA is not enabled.\n\t [[tower_0/strided_slice]]",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mInvalidArgumentError\u001b[0m                      Traceback (most recent call last)",
-      "File \u001b[0;32m~/miniconda3/envs/lucidenv/lib/python3.12/site-packages/tensorflow/python/client/session.py:1402\u001b[0m, in \u001b[0;36mBaseSession._do_call\u001b[0;34m(self, fn, *args)\u001b[0m\n\u001b[1;32m   1401\u001b[0m \u001b[38;5;28;01mtry\u001b[39;00m:\n\u001b[0;32m-> 1402\u001b[0m   \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[43mfn\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43margs\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m   1403\u001b[0m \u001b[38;5;28;01mexcept\u001b[39;00m errors\u001b[38;5;241m.\u001b[39mOpError \u001b[38;5;28;01mas\u001b[39;00m e:\n",
-      "File \u001b[0;32m~/miniconda3/envs/lucidenv/lib/python3.12/site-packages/tensorflow/python/client/session.py:1384\u001b[0m, in \u001b[0;36mBaseSession._do_run.<locals>._run_fn\u001b[0;34m(feed_dict, fetch_list, target_list, options, run_metadata)\u001b[0m\n\u001b[1;32m   1382\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21m_run_fn\u001b[39m(feed_dict, fetch_list, target_list, options, run_metadata):\n\u001b[1;32m   1383\u001b[0m   \u001b[38;5;66;03m# Ensure any changes to the graph are reflected in the runtime.\u001b[39;00m\n\u001b[0;32m-> 1384\u001b[0m   \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m_extend_graph\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m   1385\u001b[0m   \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_call_tf_sessionrun(options, feed_dict, fetch_list,\n\u001b[1;32m   1386\u001b[0m                                   target_list, run_metadata)\n",
-      "File \u001b[0;32m~/miniconda3/envs/lucidenv/lib/python3.12/site-packages/tensorflow/python/client/session.py:1425\u001b[0m, in \u001b[0;36mBaseSession._extend_graph\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m   1424\u001b[0m \u001b[38;5;28;01mwith\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_graph\u001b[38;5;241m.\u001b[39m_session_run_lock():  \u001b[38;5;66;03m# pylint: disable=protected-access\u001b[39;00m\n\u001b[0;32m-> 1425\u001b[0m   \u001b[43mtf_session\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mExtendSession\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m_session\u001b[49m\u001b[43m)\u001b[49m\n",
-      "\u001b[0;31mInvalidArgumentError\u001b[0m: Cannot assign a device for operation tower_0/strided_slice: {{node tower_0/strided_slice}} was explicitly assigned to /device:GPU:0 but available devices are [ /job:localhost/replica:0/task:0/device:CPU:0 ]. Make sure the device specification refers to a valid device. The requested device appears to be a GPU, but CUDA is not enabled.\n\t [[tower_0/strided_slice]]",
-      "\nDuring handling of the above exception, another exception occurred:\n",
-      "\u001b[0;31mInvalidArgumentError\u001b[0m                      Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[7], line 22\u001b[0m\n\u001b[1;32m     20\u001b[0m \u001b[38;5;66;03m# Force the problematic operation to be placed on the CPU device\u001b[39;00m\n\u001b[1;32m     21\u001b[0m \u001b[38;5;28;01mwith\u001b[39;00m tf\u001b[38;5;241m.\u001b[39mdevice(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m/cpu:0\u001b[39m\u001b[38;5;124m'\u001b[39m):\n\u001b[0;32m---> 22\u001b[0m     \u001b[43msess\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mrun\u001b[49m\u001b[43m(\u001b[49m\u001b[43mstrided_slice_op\u001b[49m\u001b[43m)\u001b[49m \n\u001b[1;32m     23\u001b[0m \u001b[38;5;66;03m# Restore the weights\u001b[39;00m\n\u001b[1;32m     24\u001b[0m saver\u001b[38;5;241m.\u001b[39mrestore(sess, os\u001b[38;5;241m.\u001b[39mpath\u001b[38;5;241m.\u001b[39mjoin(model_checkpoint_dir, model_checkpoint))\n",
-      "File \u001b[0;32m~/miniconda3/envs/lucidenv/lib/python3.12/site-packages/tensorflow/python/client/session.py:972\u001b[0m, in \u001b[0;36mBaseSession.run\u001b[0;34m(self, fetches, feed_dict, options, run_metadata)\u001b[0m\n\u001b[1;32m    969\u001b[0m run_metadata_ptr \u001b[38;5;241m=\u001b[39m tf_session\u001b[38;5;241m.\u001b[39mTF_NewBuffer() \u001b[38;5;28;01mif\u001b[39;00m run_metadata \u001b[38;5;28;01melse\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m\n\u001b[1;32m    971\u001b[0m \u001b[38;5;28;01mtry\u001b[39;00m:\n\u001b[0;32m--> 972\u001b[0m   result \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m_run\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;28;43;01mNone\u001b[39;49;00m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mfetches\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mfeed_dict\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43moptions_ptr\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m    973\u001b[0m \u001b[43m                     \u001b[49m\u001b[43mrun_metadata_ptr\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m    974\u001b[0m   \u001b[38;5;28;01mif\u001b[39;00m run_metadata:\n\u001b[1;32m    975\u001b[0m     proto_data \u001b[38;5;241m=\u001b[39m tf_session\u001b[38;5;241m.\u001b[39mTF_GetBuffer(run_metadata_ptr)\n",
-      "File \u001b[0;32m~/miniconda3/envs/lucidenv/lib/python3.12/site-packages/tensorflow/python/client/session.py:1215\u001b[0m, in \u001b[0;36mBaseSession._run\u001b[0;34m(self, handle, fetches, feed_dict, options, run_metadata)\u001b[0m\n\u001b[1;32m   1212\u001b[0m \u001b[38;5;66;03m# We only want to really perform the run if fetches or targets are provided,\u001b[39;00m\n\u001b[1;32m   1213\u001b[0m \u001b[38;5;66;03m# or if the call is a partial run that specifies feeds.\u001b[39;00m\n\u001b[1;32m   1214\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m final_fetches \u001b[38;5;129;01mor\u001b[39;00m final_targets \u001b[38;5;129;01mor\u001b[39;00m (handle \u001b[38;5;129;01mand\u001b[39;00m feed_dict_tensor):\n\u001b[0;32m-> 1215\u001b[0m   results \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m_do_run\u001b[49m\u001b[43m(\u001b[49m\u001b[43mhandle\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mfinal_targets\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mfinal_fetches\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m   1216\u001b[0m \u001b[43m                         \u001b[49m\u001b[43mfeed_dict_tensor\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43moptions\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mrun_metadata\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m   1217\u001b[0m \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[1;32m   1218\u001b[0m   results \u001b[38;5;241m=\u001b[39m []\n",
-      "File \u001b[0;32m~/miniconda3/envs/lucidenv/lib/python3.12/site-packages/tensorflow/python/client/session.py:1395\u001b[0m, in \u001b[0;36mBaseSession._do_run\u001b[0;34m(self, handle, target_list, fetch_list, feed_dict, options, run_metadata)\u001b[0m\n\u001b[1;32m   1392\u001b[0m   \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_call_tf_sessionprun(handle, feed_dict, fetch_list)\n\u001b[1;32m   1394\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m handle \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m:\n\u001b[0;32m-> 1395\u001b[0m   \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m_do_call\u001b[49m\u001b[43m(\u001b[49m\u001b[43m_run_fn\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mfeeds\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mfetches\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mtargets\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43moptions\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m   1396\u001b[0m \u001b[43m                       \u001b[49m\u001b[43mrun_metadata\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m   1397\u001b[0m \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[1;32m   1398\u001b[0m   \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_do_call(_prun_fn, handle, feeds, fetches)\n",
-      "File \u001b[0;32m~/miniconda3/envs/lucidenv/lib/python3.12/site-packages/tensorflow/python/client/session.py:1421\u001b[0m, in \u001b[0;36mBaseSession._do_call\u001b[0;34m(self, fn, *args)\u001b[0m\n\u001b[1;32m   1416\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;124m'\u001b[39m\u001b[38;5;124monly supports NHWC tensor format\u001b[39m\u001b[38;5;124m'\u001b[39m \u001b[38;5;129;01min\u001b[39;00m message:\n\u001b[1;32m   1417\u001b[0m   message \u001b[38;5;241m+\u001b[39m\u001b[38;5;241m=\u001b[39m (\u001b[38;5;124m'\u001b[39m\u001b[38;5;130;01m\\n\u001b[39;00m\u001b[38;5;124mA possible workaround: Try disabling Grappler optimizer\u001b[39m\u001b[38;5;124m'\u001b[39m\n\u001b[1;32m   1418\u001b[0m               \u001b[38;5;124m'\u001b[39m\u001b[38;5;130;01m\\n\u001b[39;00m\u001b[38;5;124mby modifying the config for creating the session eg.\u001b[39m\u001b[38;5;124m'\u001b[39m\n\u001b[1;32m   1419\u001b[0m               \u001b[38;5;124m'\u001b[39m\u001b[38;5;130;01m\\n\u001b[39;00m\u001b[38;5;124msession_config.graph_options.rewrite_options.\u001b[39m\u001b[38;5;124m'\u001b[39m\n\u001b[1;32m   1420\u001b[0m               \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mdisable_meta_optimizer = True\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[0;32m-> 1421\u001b[0m \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;28mtype\u001b[39m(e)(node_def, op, message)\n",
-      "\u001b[0;31mInvalidArgumentError\u001b[0m: Graph execution error:\n\nDetected at node 'tower_0/strided_slice' defined at (most recent call last):\nNode: 'tower_0/strided_slice'\nCannot assign a device for operation tower_0/strided_slice: {{node tower_0/strided_slice}} was explicitly assigned to /device:GPU:0 but available devices are [ /job:localhost/replica:0/task:0/device:CPU:0 ]. Make sure the device specification refers to a valid device. The requested device appears to be a GPU, but CUDA is not enabled.\n\t [[tower_0/strided_slice]]"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import os\n",
     "import tensorflow.compat.v1 as tf\n",
-    "\n",
+    "import lucid_kietzmannlab.modelzoo.vision_models as models\n",
     "\n",
     "\n",
     "model_checkpoint_dir = \"/Users/vkapoor/Downloads/training_seed_05\"\n",
     "model_checkpoint = \"model.ckpt_epoch89\"\n",
-    "# Load the meta graph\n",
+    "\n",
     "graph = tf.Graph()\n",
     "with graph.as_default():\n",
-    "    with tf.device('/cpu:0'):\n",
-    "        saver = tf.train.import_meta_graph(os.path.join(model_checkpoint_dir, model_checkpoint + '.meta'))\n",
-    "\n",
-    "\n",
-    "    \n",
-    "with tf.Session(graph=graph) as sess:\n",
-    "     # Get the problematic operation by its name\n",
-    "    strided_slice_op = graph.get_operation_by_name('tower_0/strided_slice')\n",
-    "\n",
-    "    # Force the problematic operation to be placed on the CPU device\n",
-    "    with tf.device('/cpu:0'):\n",
-    "        sess.run(strided_slice_op) \n",
-    "    # Restore the weights\n",
-    "    saver.restore(sess, os.path.join(model_checkpoint_dir, model_checkpoint))\n",
-    "\n",
-    "      \n",
+    "    model = models.AlexNetEcoset(model_checkpoint_dir = model_checkpoint_dir, model_checkpoint = model_checkpoint)\n",
     "\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Requirement already satisfied: tf_slim in /Users/vkapoor/miniconda3/envs/lucidenv/lib/python3.12/site-packages (1.1.0)\n",
+      "Requirement already satisfied: absl-py>=0.2.2 in /Users/vkapoor/miniconda3/envs/lucidenv/lib/python3.12/site-packages (from tf_slim) (2.1.0)\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "import tensorflow as tf\n",
+    "import tf_slim as slim\n",
+    "\n",
+    "def get_weights():\n",
+    "  return [\n",
+    "    v for v in tf.get_collection(tf.GraphKeys.TRAINABLE_VARIABLES)\n",
+    "    if v.name.endswith('weights:0')\n",
+    "    ]\n",
+    "  \n",
+    "def alexnet_v2(inputs,\n",
+    "               num_classes=1000,\n",
+    "               is_training=True,\n",
+    "               dropout_keep_prob=0.5,\n",
+    "               spatial_squeeze=True,\n",
+    "               scope='alexnet_v2',\n",
+    "               global_pool=False,\n",
+    "               reuse_variables=True,\n",
+    "               data_format='NHWC'\n",
+    "               ):\n",
+    "  \"\"\"AlexNet version 2.\n",
+    "  Described in: http://arxiv.org/pdf/1404.5997v2.pdf\n",
+    "  Parameters from:\n",
+    "  github.com/akrizhevsky/cuda-convnet2/blob/master/layers/\n",
+    "  layers-imagenet-1gpu.cfg\n",
+    "  Note: All the fully_connected layers have been transformed to conv2d layers.\n",
+    "        To use in classification mode, resize input to 224x224 or set\n",
+    "        global_pool=True. To use in fully convolutional mode, set\n",
+    "        spatial_squeeze to false.\n",
+    "        The LRN layers have been removed and change the initializers from\n",
+    "        random_normal_initializer to xavier_initializer.\n",
+    "  Args:\n",
+    "    inputs: a tensor of size [batch_size, height, width, channels].\n",
+    "    num_classes: the number of predicted classes. If 0 or None, the logits layer\n",
+    "    is omitted and the input features to the logits layer are returned instead.\n",
+    "    is_training: whether or not the model is being trained.\n",
+    "    dropout_keep_prob: the probability that activations are kept in the dropout\n",
+    "      layers during training.\n",
+    "    spatial_squeeze: whether or not should squeeze the spatial dimensions of the\n",
+    "      logits. Useful to remove unnecessary dimensions for classification.\n",
+    "    scope: Optional scope for the variables.\n",
+    "    global_pool: Optional boolean flag. If True, the input to the classification\n",
+    "      layer is avgpooled to size 1x1, for any input size. (This is not part\n",
+    "      of the original AlexNet.)\n",
+    "  Returns:\n",
+    "    net: the output of the logits layer (if num_classes is a non-zero integer),\n",
+    "      or the non-dropped-out input to the logits layer (if num_classes is 0\n",
+    "      or None).\n",
+    "    end_points: a dict of tensors with intermediate activations.\n",
+    "  \"\"\"\n",
+    "  act = []\n",
+    "  with tf.variable_scope(scope, 'alexnet_v2', [inputs], reuse=reuse_variables) as sc:\n",
+    "    end_points_collection = sc.original_name_scope + '_end_points'\n",
+    "    # Collect outputs for conv2d, fully_connected and max_pool2d.\n",
+    "    with slim.arg_scope([slim.conv2d, slim.fully_connected, slim.max_pool2d],\n",
+    "                        outputs_collections=[end_points_collection], data_format=data_format):\n",
+    "      net = slim.conv2d(inputs, 64, [11, 11], 4, padding='VALID',\n",
+    "                        scope='conv1')\n",
+    "      act.append(net)\n",
+    "      net = slim.max_pool2d(net, [3, 3], 2, scope='pool1')\n",
+    "      net = slim.conv2d(net, 192, [5, 5], scope='conv2')\n",
+    "      act.append(net)\n",
+    "      net = slim.max_pool2d(net, [3, 3], 2, scope='pool2')\n",
+    "      net = slim.conv2d(net, 384, [3, 3], scope='conv3')\n",
+    "      act.append(net)\n",
+    "      net = slim.conv2d(net, 384, [3, 3], scope='conv4')\n",
+    "      act.append(net)\n",
+    "      net = slim.conv2d(net, 256, [3, 3], scope='conv5')\n",
+    "      act.append(net)\n",
+    "      net = slim.max_pool2d(net, [3, 3], 2, scope='pool5')\n",
+    "\n",
+    "      # Use conv2d instead of fully_connected layers.\n",
+    "      with slim.arg_scope(\n",
+    "          [slim.conv2d],\n",
+    "          weights_initializer=trunc_normal(0.005),\n",
+    "          biases_initializer=tf.constant_initializer(0.1)):\n",
+    "        net = slim.conv2d(net, 4096, [5, 5], padding='VALID',\n",
+    "                          scope='fc6')\n",
+    "        net = slim.dropout(net, dropout_keep_prob, is_training=is_training,\n",
+    "                           scope='dropout6')\n",
+    "        act.append(net)\n",
+    "        net = slim.conv2d(net, 4096, [1, 1], scope='fc7')\n",
+    "        act.append(net)\n",
+    "        # Convert end_points_collection into a end_point dict.\n",
+    "        end_points = slim.utils.convert_collection_to_dict(\n",
+    "            end_points_collection)\n",
+    "        if global_pool:\n",
+    "          net = tf.reduce_mean(\n",
+    "              input_tensor=net, axis=[1, 2], keepdims=True, name='global_pool')\n",
+    "          end_points['global_pool'] = net\n",
+    "        if num_classes:\n",
+    "          net = slim.dropout(net, dropout_keep_prob, is_training=is_training,\n",
+    "                             scope='dropout7')\n",
+    "          net = slim.conv2d(\n",
+    "              net,\n",
+    "              num_classes, [1, 1],\n",
+    "              activation_fn=None,\n",
+    "              normalizer_fn=None,\n",
+    "              biases_initializer=tf.zeros_initializer(),\n",
+    "              scope='fc8')\n",
+    "          if spatial_squeeze:\n",
+    "            squeeze_dims = [2, 3] if data_format == 'NCHW' else [1, 2]\n",
+    "            net = tf.squeeze(net, squeeze_dims, name='fc8/squeezed')\n",
+    "          readout = net\n",
+    "          end_points[sc.name + '/fc8'] = net\n",
+    "      return readout, act, get_weights()\n",
+    "alexnet_v2.default_image_size = 224\n",
+    "\n",
+    "\n",
+    "trunc_normal = lambda stddev: tf.truncated_normal_initializer(\n",
+    "    0.0, stddev)\n",
+    "\n",
+    "\n",
+    "def alexnet_v2_arg_scope(weight_decay=0.0005):\n",
+    "  with slim.arg_scope([slim.conv2d, slim.fully_connected],\n",
+    "                      activation_fn=tf.nn.relu,\n",
+    "                      biases_initializer=tf.constant_initializer(0.1),\n",
+    "                      weights_regularizer=slim.l2_regularizer(weight_decay)):\n",
+    "    with slim.arg_scope([slim.conv2d], padding='SAME'):\n",
+    "      with slim.arg_scope([slim.max_pool2d], padding='VALID') as arg_sc:\n",
+    "        return arg_sc\n"
    ]
   },
   {
