--- a/examples/interation_between_neurons.ipynb
+++ b/examples/interation_between_neurons.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,21 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# This is currently not working \n",
-    "\n",
-    "model_checkpoint_dir = \"/share/klab/vkapoor/training_seed_05\"\n",
-    "model_checkpoint = \"model.ckpt_epoch89\"\n",
-    "#model = models.AlexNetEcoset(model_checkpoint_dir = model_checkpoint_dir, model_checkpoint = model_checkpoint)\n",
-    "#model.load_graphdef()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -59,11 +45,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
-    "layer_name_list = [node.name for node in model.graph_def.node if 'input' not in node.name]\n",
+    "layer_name_list = [layer_info[\"name\"] for layer_info in model.layers]\n",
+    "\n",
+    "#[node.name for node in model.graph_def.node if 'Placeholder' not in node.name]\n",
     "\n",
     "# Get the shape of each layer\n",
     "with tf.Graph().as_default() as graph:\n",
@@ -97,10 +85,10 @@
     "        if 0 <= channel <= max_channel:\n",
     "            clear_output(wait=True)\n",
     "            # Render visualization for the selected layer and channel\n",
-    "            try:\n",
-    "              _ = render.render_vis(model, C((layer_name, channel)))\n",
-    "            except Exception:\n",
-    "                print('No gradients for this layer')   \n",
+    "            #try:\n",
+    "            _ = render.render_vis(model, C((layer_name, channel)))\n",
+    "            #except Exception:\n",
+    "            #    print('No gradients for this layer')   \n",
     "\n",
     "def visualize_all():\n",
     "    # Check if the layer exists in the shape dictionary\n",
@@ -178,9 +166,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "cfc174da140e4eb8b6d5bd5ca000be36",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "interactive(children=(Dropdown(description='Layer:', options=('Conv2D', 'Conv2D_1', 'Conv2D_2', 'Conv2D_3', 'C…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<function __main__.visualize(layer_name, channel)>"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "layer_dropdown.observe(update_channel_slider, names='value')\n",
     "\n",
@@ -221,6 +234,16 @@
     "\n",
     "if image_channel:\n",
     "    plot_images(image_channel)   "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for layer, shape in layer_shape_dict.items():\n",
+    "    print(f'Layer: {layer}, Shape: {shape}')"
    ]
   },
   {
